# life-wiki

./: .gitignore  README.md  pyproject.toml
lifewiki/: config.py  main.py
lifewiki/api/: ingest.py  query.py  timeline.py  wiki.py
lifewiki/db/: database.py
lifewiki/db/repositories/: source_repo.py
lifewiki/models/: source.py
lifewiki/prompts/: cross_reference.md  ingest_source.md  query_answer.md
lifewiki/services/: ingest_service.py  llm_service.py  wiki_compiler.py
templates/: 404.html  base.html  index.html  ingest.html  search.html  timeline.html  wiki_page.html
