[project]
name = "lifewiki"
version = "0.1.0"
description = "A personal life wiki powered by LLM, inspired by Karpathy's llm-wiki"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "anthropic>=0.40.0",
    "aiosqlite>=0.20.0",
    "python-slugify>=8.0.0",
    "markdown>=3.6",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 120
